fixed some responsiveness issues with 'select a graphic' dialog on mobile

--- a/src/app/create-shirt/cards/graphic-card/graphic-card.component.scss
+++ b/src/app/create-shirt/cards/graphic-card/graphic-card.component.scss
@@ -8,3 +8,10 @@ img {
     max-width: 100%;
     max-height: 220px;
 }
+
+@media screen and (max-width: 960px) {
+    ::ng-deep mat-dialog-container {
+        padding: 5px !important;
+    }
+}
+  
